--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <nav>
             <ul class="header-menu">
                 <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#Tecnologias">Tecnologias</a></li>
                 <li><a href="#Formação">Formação</a></li>
                 <li><a href="#Contato">Contato</a></li>
             </ul>
@@ -24,13 +25,13 @@
     </header>
     <main class="introducao">
         <img src="imagens/carinhacodando.gif" alt="Cara Programando">
-
         <div>
             <h1>Desenvolvedor<br>Front-End</h1>
-            <p>Olá, sou Arlei Domingos de Sousa, um jovem de 17 anos apaixonado por programação front-end. Minha jornada
-                na web começou com HTML, CSS e JavaScript, e desde então tenho criado projetos envolventes e criativos.
-                Busco constantemente aprender e me aprimorar, sempre em busca de novos desafios.</p>
+            <p>Olá, sou Arlei Domingos de Sousa, um jovem de 18 anos apaixonado por programação front-end. Minha jornada
+              na web começou com HTML, CSS e JavaScript, e desde então tenho criado projetos inovadores e criativos.
+                Busco constantemente aprender e me aprimorar, sempre em busca de novos desafios. Em busca de oportunidades para aperfeiçoar minhas habilidades e trabalhar em projetos desafiadores.</p>
         </div>
+
     </main>
 
         <div class="titulo-projeto">
@@ -41,10 +42,10 @@
           
             <div class="project-container" data-aos="fade-up" data-aos-delay="300">
                 <div class="project-card" >
-                    <img src="imagens/devbarber.jpg" alt="Projeto 3">
+                    <img src="imagens/devbarber.jpg" alt="Projeto 1">
                     <h3>Projeto Barbearia</h3>
                     <p>
-                        Landing page para uma barbearia. Essa página permite que os clientes agendem horários, confiram os serviços e entrem em contato facilmente. Desenvolvido comm HTML e CSS, e usando a biblioteca AOS.
+                        Landing page para uma barbearia. Essa página permite que os clientes agendem horários, confiram os serviços e entrem em contato facilmente. Desenvolvido comm HTML e CSS.
                     </p>
                     <div class="buttons">
                         <a href="https://github.com/Arleisousa/ProjetoBarber" target="_blank" class="btn">GitHub</a>
@@ -55,21 +56,7 @@
 
             <div class="project-container align-right " data-aos="fade-up" data-aos-delay="300">
                 <div class="project-card">
-                    <img src="imagens/projeto-wildbeast.jpg" alt="Projeto 2">
-                    <h3>Projeto WildBeast</h3>
-                    <p>
-                        O projeto permite aos usuários aprenderem sobre as características de diferentes animais. desenvolvido com HTML e CSS (grid-layout).
-                    </p>
-                    <div class="buttons">
-                        <a href="https://github.com/Arleisousa/ProjetoWildBeast" target="_blank" class="btn">GitHub</a>
-                        <a href="https://arleisousa.github.io/ProjetoWildBeast/" target="_blank" class="btn">Deploy</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-container" data-aos="fade-up" data-aos-delay="300">
-                <div class="project-card" >
-                    <img src="imagens/projeto-bikcraft.jpg" alt="Projeto 3">
+                    <img src="imagens/projeto-bikcraft.jpg" alt="Projeto 2">
                     <h3>Projeto Bikcraft</h3>
                     <p>
                         Plataforma online para explorar e adquirir uma ampla variedade de bicicletas e acessórios relacionados. Os visitantes podem navegar pelas categorias de produtos, obter informações detalhadas sobre cada bicicleta. Desenvolvido com HTML, CSS e JavaScript.
@@ -81,16 +68,30 @@
                 </div>
             </div>
 
-            <div class="project-container align-right" data-aos="fade-up" data-aos-delay="300">
-                <div class="project-card">
-                    <img src="imagens/projeto-flexblog.jpg" alt="Projeto 4">
-                    <h3>Projeto Desevendando Estilos</h3>
+            <div class="project-container" data-aos="fade-up" data-aos-delay="300">
+                <div class="project-card" >
+                    <img src="imagens/animais-fantásticos.jpg" alt="Projeto 3">
+                    <h3>Projeto Animais Fantásticos</h3>
                     <p>
-                        O projeto é um site de moda online criado com HTML e CSS (Flex-Box). Ele apresenta artigos de moda, dicas de estilo e tendências atuais em um layout elegante e responsivo.
+                        O projeto consiste em uma página web que exibe informações sobre animais fantásticos. Utiliza tecnologias como HTML5, CSS3, JavaScript (ES6+) e Webpack, e faz uso de módulos, funções puras e classes para torná-lo mais organizado e fácil de entender.
                     </p>
                     <div class="buttons">
-                        <a href="https://github.com/Arleisousa/Projeto-Blog" target="_blank" class="btn">GitHub</a>
-                        <a href="https://arleisousa.github.io/Projeto-Blog/" target="_blank" class="btn">Deploy</a>
+                        <a href="https://github.com/Arleisousa/Projeto-AnimaisFantasticos" target="_blank" class="btn">GitHub</a>
+                        <a href= "https://arleisousa.github.io/Projeto-AnimaisFantasticos/" target="_blank" class="btn">Deploy</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-container align-right" data-aos="fade-up" data-aos-delay="300">
+                <div class="project-card">
+                    <img src="imagens/projeto-wildbeast.jpg" alt="Projeto 4">
+                    <h3>Projeto WildBeast</h3>
+                    <p>
+                        O projeto permite aos usuários aprenderem sobre as características de diferentes animais. desenvolvido com HTML e CSS (grid-layout).
+                    </p>
+                    <div class="buttons">
+                        <a href="https://github.com/Arleisousa/ProjetoWildBeast" target="_blank" class="btn">GitHub</a>
+                        <a href="https://arleisousa.github.io/ProjetoWildBeast/" target="_blank" class="btn">Deploy</a>
                     </div>
                 </div> 
             </div>
@@ -107,16 +108,11 @@
                     sempre atualizado com cursos intensivos online... 🎓</p>
 
                 <ul class="faculdade-listas">
-
-
                     <li class="faculdade">
                         <span class="faculdade-tipo">Tecnólogo</span>
                         <h3 class="faculdade-curso">Análise e Desenvolvimento de Sistemas</h3>
                         <span class="faculdade-instituicao">Unichristus</span>
                     </li>
-
-
-
 
                 </ul>
                 <div class="formacao-extra">
