ajustes no menu

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <h2 data-aos="zoom-in" data-aos-delay="100"> { Arlei Sousa } </h2>
         <nav>
             <ul class="header-menu">
-                <li><a href="#projetos">Projetos</a></li>
-                <li><a href="#Tecnologias">Tecnologias</a></li>
+                <li><a href="#Projetos">Projetos</a></li>
                 <li><a href="#Formação">Formação</a></li>
                 <li><a href="#Contato">Contato</a></li>
             </ul>
