--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="swiper-slide">
                     <p>CSS</p>
-                    <img src="imagens/CSS2.png" alt="">
+                    <img src="imagens/logo-css3.png" alt="">
                 </div>
                 <div class="swiper-slide">
                     <p>JavaScript</p>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="swiper-slide">
                     <p>Tailwind CSS</p>
-                    <img src="imagens/tailwind.png" alt="">
+                    <img src="imagens/tailwind-css.svg" alt="">
                 </div>
 
                 </div>
