--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="swiper-slide">
                     <p>Tailwind CSS</p>
-                    <img src="imagens/tailwind-css.svg" alt="">
+                    <img class="tailwind" src="imagens/tailwind-css.svg" alt="">
                 </div>
 
                 </div>
