--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
                     <img class="tailwind" src="imagens/tailwind-css.svg" alt="">
                 </div>
 
+                <div class="swiper-slide">
+                    <p>GIT</p>
+                    <img class="tailwind" src="imagens/Git_icon.svg.png" alt="">
+                </div>
+
                 </div>
                 <!-- If we need pagination -->
                 <div class="swiper-pagination"></div>
